src/objects/ERP_sales_obj__c.object
<CustomObject>
    <fields>
        <fullName>Business_area__c</fullName>
        <label>Business area</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_region__c</fullName>
        <label>Business region</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_logfile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ERP logfile</label>
        <referenceTo>ERP_logfile__c</referenceTo>
        <relationshipName>ERP_sales_obj</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_date__c</fullName>
        <label>Sales date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_import_date__c</fullName>
        <description>Date the the import is dun</description>
        <label>Sales import date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sales_currency__c</fullName>
        <label>sales currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_import_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id of the imported record</description>
        <externalId>true</externalId>
        <label>Sales import id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ERP Sales Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP_sales_obj</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>